add time-at-library fields to rotation item circ count report

--- a/templates/rotations/admin/reports/item_circ_counts.tmpl
+++ b/templates/rotations/admin/reports/item_circ_counts.tmpl
@@ -43,11 +43,13 @@ $('document').ready(function(){
                    ]
                 },
                 "aoColumns": [
+                    { "mDataProp": "library" },
+                    { "mDataProp": "name" },
+                    { "mDataProp": "ts_start" },
+                    { "mDataProp": "ts_end" },
                     { "mDataProp": "title" },
                     { "mDataProp": "callno" },
                     { "mDataProp": "barcode" },
-                    { "mDataProp": "library" },
-                    { "mDataProp": "name" },
                     { "mDataProp": "circs" }
                 ]
           });
@@ -65,8 +67,6 @@ $('document').ready(function(){
       <li>Circs by item and library.</li>
     </ol>
   </div>
-
-  <div id="middlecontent">
 
   <div id="middlecontent">
 
