--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/shipping-1.2.js"></script>
+<script type="text/javascript" src="/js/shipping-1.3.js"></script>
 
 
 <script type="text/javascript">
@@ -71,11 +71,10 @@ $('document').ready(function(){
 
   <div id="leftcontent">
     <h2>Instructions</h2>
-    <ol>
-      <li>If your due date is the same for all (or most) requests you are filling, enter that as the "default due date".</li>
-      <li>For each of the requests that you are filling, click the "Sent" button.</li>
-      <li>Hover over a library's symbol to see the full name of the library.</li>
-    </ol>
+    <p>If your due date is the same for all (or most) requests you are filling, enter that as the "default due date".</p><br/>
+    <p>For each of the requests that you are filling, click the "Sent" button.</p><br/>
+    <p>The "Oops!" button will return the request to the Respond list.</p><br/>
+    <p>Hover over a library's symbol to see the full name of the library.</p><br/>
   </div>
 
   <div id="middlecontent">
