updated welcome screen with message about the new return-to-the-Respond-list button

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -38,6 +38,9 @@
       <p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
     </td>
     <td style="width:30%" valign="top">
+      <h3>Accidentally said "Will-Supply"?</h3>
+      <p>The Shipping screen now has an <strong>Oops! Return this to the Respond list</strong> button.</p><br/>
+      <p>This will remove the item from the Shipping list and place it back in the Respond list, where you can then mark it as unfilled.</p></br>
       <h3>Cancelling a hold</h3>
       <p>Borrowers: if a lender has placed a hold for you, that item will show up in the "Borrowing..." | "Holds placed" screen.</p><br/>
       <p>You can cancel a request that has a hold placed by clicking the <strong>Cancel request</strong> button for it.</p><br/>
