--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -5,7 +5,8 @@
 
 
 <script type="text/javascript">
-<!-- set_secondary_tab("menu_patrons"); -->
+
+set_primary_tab("menu_myaccount");
 
 $.ajaxSetup ({  
   cache: false  
