--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -3,13 +3,16 @@
 
 <script type="text/javascript">
 
-set_primary_tab("menu_current");
+//set_primary_tab("menu_current");
 
 $.ajaxSetup ({  
   cache: false  
 });  
 
 $('document').ready(function(){
+
+    $('#leftcontent').html('<strong>What the "status" means:</strong><table style="border:1px solid black;border-collapse:collapse;"><colgroup><col span="1" style="width: 40%;"><col span="1" style="width: 60%;"></colgroup><tr><td style="border:1px solid black;">ILL-Request</td><td style="border:1px solid black;">Your library has requested it.</td></tr><tr><td style="border:1px solid black;">ILL-Answer|Will-supply</td><td style="border:1px solid black;">The lender will lend it.</td></tr><tr><td style="border:1px solid black;">ILL-Answer|Hold-placed</td><td style="border:1px solid black;">The lender has placed a hold for you.  They estimate that it will be shipped on the date shown in the "message" column.</td></tr><tr><td style="border:1px solid black;">ILL-Answer|Unfilled</td><td style="border:1px solid black;">The lender cannot lend it.  Your library will try another lender if possible.</td></tr><tr><td style="border:1px solid black;">Shipped</td><td style="border:1px solid black;">The lender has shipped it to your library.</td></tr><tr><td style="border:1px solid black;">Received</td><td style="border:1px solid black;">Your library has received it from the lender, and should be contacting you soon.</td></tr><tr><td style="border:1px solid black;">Returned</td><td style="border:1px solid black;">Your library has returned it to the lender.</td></tr><tr><td style="border:1px solid black;">Checked-in</td><td style="border:1px solid black;">The lender has received the returned book.</td></tr><tr><td style="border:1px solid black;">Message</td><td style="border:1px solid black;">General status message.</td></tr><tr><td style="border:1px solid black;">Cancelled</td><td style="border:1px solid black;">Your library has cancelled the request to that lender.  They may try again with a different lender.</td></tr></table>');
+
 
     var anOpenBorrowing = [];
     var sImageUrl = "/plugins/DataTables-1.8.2/examples/examples_support/";
@@ -95,7 +98,7 @@ $('document').ready(function(){
 
 
 <div id="main">
-
+<!--
   <div id="leftcontent">
     <strong>What the 'status' means:</strong>
     <table style="border:1px solid black;border-collapse:collapse;">
@@ -115,7 +118,7 @@ $('document').ready(function(){
       <tr><td style="border:1px solid black;">Cancelled</td><td style="border:1px solid black;">Your library has cancelled the request to that lender.  They may try again with a different lender.</td></tr>
     </table>
   </div>
-
+-->
   <div id="middlecontent">
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
