--- a/templates/search/request.tmpl
+++ b/templates/search/request.tmpl
@@ -30,7 +30,7 @@
       <TMPL_IF NAME=error_sendmail>
 	<br />
 	<h2>We've had a problem sending the email automatically</h2>
-	<p>Maplin has encountered a problem sending this request.</p>
+	<p>fILL has encountered a problem sending this request.</p>
 	<p>You can send this request manually by using your
 	  own email program (eg: GMail, Outlook, Hotmail, etc).</p><br />
 	<ol>
