--- a/htdocs/fILL-public-accessible.1.0.css
+++ b/htdocs/fILL-public-accessible.1.0.css
@@ -82,7 +82,6 @@ nav li a
 	color: #fff;
 	text-decoration: none;
 	text-transform: uppercase;
-	
 	border-right: 2px solid #fff;
 }
 
@@ -179,6 +178,17 @@ footer
 
 input {
 	margin-left: 20px;
+}
+
+/*------------------------------------------------------*/
+.details {
+    border: 1px solid #000000;
+    border-radius: 10px;
+}
+
+.secondary_info {
+    display: none;
+    background-color: #efdd6f;
 }
 
 /*------------------------------------------------------*/
