jQuery-ified fILL-client-public.js

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/fILL-public-datatables.1.0.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
-  <script type="text/javascript" src="/js/fILL_client-public-1.5.js"></script>
+  <script type="text/javascript" src="/js/fILL_client-public-1.8.js"></script>
 
 <script type="text/javascript">
 
@@ -98,7 +98,7 @@
       </form>
     </div>
 
-    <main>
+    <main role="main">
 
 <!-- Begin content -->
 
@@ -120,6 +120,7 @@
    <table width="100%" border="0" cellpadding="6" cellspacing="0">
     <tr>
      <td valign="top">
+
       <div id="AVnotice">
 	<table>
 	  <tr>
@@ -131,6 +132,7 @@
 	  </tr>
 	</table>
       </div>
+
       <div id="ranking" style="clear:left; display:none">
        <form name="select">
         <label for="sort">Sort by</label>
@@ -151,6 +153,7 @@
         per page.
        </form>
       </div>
+
       <div id="pager"></div>
       <div id="navi"></div>
       <div id="results"></div>
