--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -175,7 +175,9 @@
 </div> <!-- container -->
 <footer role="contentinfo">
 	Copyright © Site name, 20XX
-	<TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library">
+	<div id="username"><TMPL_VAR name="username"></div>
+	<TMPL_VAR name="lid">
+	<TMPL_VAR name="library">
 </footer>
 
 </body>
