--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -20,15 +20,7 @@
       <h3>About fILL, the Manitoba public libraries interlibrary-loan requesting system.</h3>
       <br />
       <p>
-	fILL enables you to quickly search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it allows you to ask your home library to try to get it for you.
-      </p>
-      <br/>
-      <h3>See the status of your Interlibrary Loan requests</h3>
-      <p>Click on the new menu item, <strong>Current borrowing</strong>, to see the status of all Interlibrary Loan requests that you currently have active.
-      </p>
-      <p>From this screen, you will be able to tell whether another library has been able to fill your request, when they shipped it, and when your library received it.
-      </p>
-      <p>The list shows only currently active requests - once you've returned an item to your library, and they've returned it to the lending library, the information is removed from the list.
+	fILL enables you to quickly search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
       </p>
       <br/>
       <h3>Tutorial</h3>
@@ -37,7 +29,7 @@
       <h3>Privacy</h3>
       <p>
 	fILL does not keep any record of your searches or requests after your books are returned.  
-	Logging in is necessary for your library to know who is making 	the request, but no information 
+	Logging in is necessary for your library to know who is making the request, but no information 
 	linking your account to any searches or requests is kept after the ILL transaction is completed.
 	Some non-identifying data may be retained for statistical purposes.
       </p>
