--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -44,6 +44,8 @@
 
 <script type="text/javascript">
   $('document').ready(function(){
+    $("#image").append("<img src=/img/holmesprofile2.png>");
+
     $("#query").focus();
   });
 </script>
@@ -77,11 +79,13 @@
       <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
+      <li><a href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
     </ul>
   </nav>
 
   <!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
   <div id="aside" role="complimentary">
+    <div id="image"></div>
     <div id="stat"></div>
     <div id="leftcontent"></div>
     <div id="termlist"></div>
