--- a/htdocs/fILL-public.1.0.css
+++ b/htdocs/fILL-public.1.0.css
@@ -136,7 +136,8 @@ h6
   border-bottom: 2px solid #000;
   margin-right: 15px;
   padding-bottom: 20px;
-  color: #408040;
+  color: red;
+  /*color: #408040;*/
 }
 
 #middlecontent {
