--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
 <!--  <link rel="stylesheet" href="/fILL-public.1.0.css"></link> -->
-  <link rel="stylesheet" href="/fILL-public-accessible.1.0.css"></link>
+  <link rel="stylesheet" href="/fILL-public-accessible.1.1.css"></link>
   <link rel="stylesheet" href="/fILL-public-datatables.1.0.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
@@ -68,7 +68,7 @@
 <div id="container">
   <!--ARIA MARKER 'BANNER'-->
   <header role="banner">
-    <h1><span class="fill">f</span>ILL</h1> <p>connecting libraries. serving patrons.</p>
+    <img src="/img/fill-logo.png" class="fill-logo" alt="fill"> <p class="fill-tagline">connecting libraries. serving patrons.</p>
     <a href="?authen_logout=1"><button class="butlink">log out</button></a>
   </header>
   
@@ -83,16 +83,7 @@
     </ul>
   </nav>
 
-  <!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
-  <div id="aside" role="complimentary">
-    <div id="image"></div>
-    <div id="stat"></div>
-    <div id="leftcontent"></div>
-    <div id="termlist"></div>
-  </div>
-
   <div id="search-container">
-
     <!--***************ARIA MARKER 'SEARCH'***************-->
     <div id="search" role="search">
       <form id="searchForm" name="search">
@@ -101,8 +92,17 @@
 	<input id="button" type="submit" value="search" class="butlink">
       </form>
     </div>
+  </div> <!-- search-container -->
 
-    <main role="main">
+  <!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
+  <div id="aside" class="aside" role="complimentary">
+    <div id="image"></div>
+    <div id="stat"></div>
+    <div id="leftcontent"></div>
+    <div id="termlist"></div>
+  </div>
+
+    <main class="main" id="main" role="main">
 
 <!-- Begin content -->
 
@@ -175,7 +175,6 @@
 
 <!-- End content -->
     </main>
-  </div> <!-- search-container -->
 </div> <!-- container -->
 <footer role="contentinfo">
 	Copyright © Site name, 20XX
