template updates begin
started updating templates and testing staging server

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -309,6 +309,7 @@ button {
 
 .login {
 	display: block;
+	margin: auto;
 }
 /*------------------------------------------------------*/
 /* from Ohio Web Library */
