--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -80,11 +80,13 @@ $('document').ready(function(){
 </head>
 <body class="example_alt_pagination">
 
-<DIV id="header">
-  <div id="logo">
-    <img src="/img/fILL.png" alt="f i l l free open source software interlibrary loan management system">
-    <div id="logo_slogan">Manitoba Public Libraries ILL management system</div>
-  </div>
+<!--**************ARIA MARKER 'BANNER'**************-->
+  <header role="banner">
+      <div class="fill-info"><button class="butlink" href="#">log out</button><p>User: awoodward</p><p>Western Manitoba Regional Library - Brandon</p></div>
+      <div><img class="fill-logo" alt="fILL" src="images/fill05.png"><!--<h1><span class="fill">f</span>ILL</h1>--></div>
+      <div class="fill-tagline"><p class="fill-tagline">connecting libraries.<wbr> serving patrons.</p></div>
+      
+  </header>
   <div id="header_quick_access">
     <ul>
       <li><a href="?rm=welcome">Home</a></li>
@@ -95,6 +97,17 @@ $('document').ready(function(){
     <p id="lid"><TMPL_VAR NAME="lid"></p>
   </div>
 </DIV>
+
+<!--***************ARIA MARKER 'NAVIGATION'***************-->
+  <nav role="navigation">
+    <ul class="nav inline-items">
+      <li><a href="#">home</a></li>
+      <li><a href="#">my account</a></li>
+      <li><a href="#">current borrowing</a></li>
+      <li><a href="#">help</a></li>
+      <li><a href="#">contact</a></li>
+    </ul>
+  </nav>
 
 <!-- div id="nav1" -->
 <div id="csstabs">
