--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -57,7 +57,7 @@
   <!--ARIA MARKER 'BANNER'-->
   <header role="banner">
     <img src="/img/fill-logo.png" class="fill-logo" alt="fill"> <p class="fill-tagline">connecting libraries. serving patrons.</p>
-    <a href="?authen_logout=1"><button class="butlink">log out</button></a>
+    <a href="?authen_logout=1"><button class="button-right">log out</button></a>
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
