--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -1,10 +1,20 @@
 <!-- End content -->
-    </main>
-</div> <!-- container -->
 <footer role="contentinfo">
-	Copyright © Site name, 20XX
-	<TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library">
+<div id="nav2">
+  <ul>
+    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
+    <li><a href="?authen_logout=1">Log out</a></li>
+  </ul>
+</div>
 </footer>
+	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="images/manitoba.gif">
+
+<div id="nav2">
+  <ul>
+    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
+    <li><a href="?authen_logout=1">Log out</a></li>
+  </ul>
+</div>
 
 </body>
 </html>
