--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -1,8 +1,8 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-
-<table cellpadding=20>
-  <tr>
-    <td style="width:385px"> <!-- image is 375px wide -->
+<div id="aside-img-left">
+<img src="/img/fill-logo.png">
+</div>
+<div id="main-info-right" class="tone-box">
       <img src='/img/card_catalogue.jpg' alt="picture of a library card catalogue"/>
       <br/>
       <p class="short_instruction">
@@ -43,11 +43,11 @@
       </p>
       <br/>
       <br />
+
+      </div><!--main-info-right-->
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 
-    </td>
-  </tr>
-</table>
+
 
 <TMPL_INCLUDE NAME="footer.tmpl">
